tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_main__cli.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - "main::cli"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::overview::generate_after_help
crate::cli::validation::{validate_depth, validate_module_path}
crawk::version

----- stderr -----
